--- a/Conditionally Generate Admin User/com.sctcoding.Generator.plist
+++ b/Conditionally Generate Admin User/com.sctcoding.Generator.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>Label</key>
-	<string>com.test.u</string>
+	<string>com.sctcoding.Generator</string>
 	<key>ProgramArguments</key>
 	<array>
 		<string>/Users/Shared/Generate User Only.sh</string>
